# RhoVec

./: .gitignore  .merlin  .ocamlformat  .ocamlinit  Makefile  README.md  _tags  dev.opam  dev.opam.locked  ds.ott  ds_.tex  dune  dune-project  examples.md  main.tex  opam  opam.locked  rhovec.opam  semantics.md
.github/workflows/: workflow.yml
lib/: deparse.ml  dune  eval.ml  expr.ml  parse.ml  parser.ml  util.ml
src/: Makefile  dune  eval.ml  expr.ml  main.ml
test/: dune  eval.ml  eval_suite.ml  parse.ml  parse_suite.ml  test.ml
