opam-version: "2.0"
synopsis: "Formalization of R and dplyr"
authors: "Ming-Ho Yee <mh@mhyee.com>"
maintainer: "Ming-Ho Yee <mh@mhyee.com>"
homepage: "https://github.com/reactorlabs/RhoVec"
bug-reports: "https://github.com/reactorlabs/RhoVec/issues"
depends: [
 "alcotest"
 "ocamlformat"
 "bisect_ppx"
]
